<resources>
    <string name="app_name">Encryption Performance</string>
    <string name="des">DES</string>
    <string name="test">TEST</string>
    <string name="aes">AES</string>
    <string name="blowfish">Blowfish</string>
    <string name="todo">TODO</string>
    <string name="_3des">3DES</string>
    <string name="add">Add</string>
    <string name="todooo">todooo</string>
    <string name="_100mb">100mb</string>
    <string name="files">FILES</string>
    <string name="_1mb">1mb</string>
    <string name="_10kb">10kb</string>
    <string name="_100kb">100kb</string>
    <string name="_50kb">50KB</string>
    <string name="encrypt">ENCRYPT</string>
    <string name="encryption_time">Encryption Time</string>
    <string name="_500kb">500kb</string>
    <string name="show_averages">show averages</string>
    <string name="average">AVERAGE</string>
    <string name="show_chart">show chart</string>
    <string name="show_my_average">show_my_average</string>
    <string name="showmyaverage">show my average</string>
    <string name="application_name">CryptoAlgorithms Performance</string>
    <string name="run_all">RUN ALL</string>
    <string name="filesize">FileSize</string>
</resources>
