<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    package="com.trying.myapplication"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/encryption"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#80999191">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:stretchColumns="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView

                        android:layout_width="60dp"
                        android:background="#AB134561"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        tools:text="FileSize" />

                    <TextView

                        android:width="100dp"
                        android:background="#AB134561"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip"
                        android:text="@string/encryption_time"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="120dp"
                        android:width="90dip"
                        android:background="#AB134561"
                        android:padding="3dip"
                        android:text=""
                        android:textColor="#000000"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView

                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip"
                        android:text="@string/_10kb"
                        android:textAllCaps="true"
                        android:textColor="#000000" />

                    <TextView

                        android:id="@+id/timeAES10kb"
                        android:width="100dp"
                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip" />

                    <Button

                        android:id="@+id/btn10kb"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:width="90dip"
                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:maxWidth="100dip"
                        android:padding="3dip"
                        android:text="@string/encrypt"
                        android:textAllCaps="false"
                        android:textSize="12sp" />

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView

                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip"
                        android:text="@string/_100kb"
                        android:textAllCaps="true"
                        android:textColor="#000000" />

                    <TextView

                        android:id="@+id/timeAES100kb"
                        android:width="100dp"
                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip" />


                    <Button

                        android:id="@+id/btn100kb"
                        android:layout_width="103dp"
                        android:layout_height="match_parent"
                        android:width="90dip"
                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:maxWidth="100dip"
                        android:padding="3dip"
                        android:text="@string/encrypt"
                        android:textAllCaps="false"
                        android:textSize="12sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <TextView

                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip"
                        android:text="@string/_500kb"
                        android:textAllCaps="true"
                        android:textColor="#000000" />

                    <TextView

                        android:id="@+id/timeAES500kb"
                        android:width="100dp"
                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip" />

                    <Button

                        android:id="@+id/btn500kb"
                        android:layout_width="103dp"
                        android:layout_height="match_parent"
                        android:width="90dip"
                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:maxWidth="100dip"
                        android:padding="3dip"
                        android:text="@string/encrypt"
                        android:textAllCaps="false"
                        android:textSize="12sp" />

                </TableRow>

                <TableRow
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <TextView

                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip"
                        android:text="@string/_1mb"
                        android:textAllCaps="true"
                        android:textColor="#000000" />

                    <TextView

                        android:id="@+id/timeAES1mb"
                        android:width="100dp"
                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:padding="3dip" />

                    <Button

                        android:id="@+id/btn1mb"
                        android:layout_width="103dp"
                        android:layout_height="match_parent"
                        android:width="90dip"
                        android:background="@drawable/cells"
                        android:fontFamily="@font/abeezee"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:maxWidth="100dip"
                        android:padding="3dip"
                        android:text="@string/encrypt"
                        android:textAllCaps="false"
                        android:textSize="12sp" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/btnAES"
                android:layout_width="match_parent"
                android:layout_height="118dp"
                android:layout_gravity="bottom"
                android:background="#AB134561"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/algorithmTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abeezee"
                    android:shadowColor="#5BFFFFFF"
                    android:text="@string/aes"
                    android:textColor="#030303"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:id="@+id/avgPreCache"
                    android:layout_width="310dp"
                    android:layout_height="26dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:shadowColor="#5BFFFFFF"
                    android:textAllCaps="false"
                    android:textColor="#030303"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/avgResult"
                    android:layout_width="310dp"
                    android:layout_height="26dp"
                    android:fontFamily="@font/abeezee"
                    android:gravity="center"
                    android:padding="5dp"
                    android:shadowColor="#5BFFFFFF"
                    android:text="@string/average"
                    android:textAllCaps="false"
                    android:textColor="#030303"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnChart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#A1F8F9FA"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/abeezee"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/show_chart" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.cardview.widget.CardView>