<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/groupBarChart"
        android:layout_width="match_parent"
        android:layout_height="404dp"
        android:layout_marginTop="20dip">

    </com.github.mikephil.charting.charts.BarChart>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="158dp"
        android:layout_marginTop="20dip"
        android:background="#00070707"
        android:clickable="true"
        android:clipToPadding="false"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <LinearLayout

                android:id="@+id/showMyChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F8F9FA"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/chart_icon"
                    android:contentDescription="@string/todo"
                    android:padding="10dp"
                    android:src="@drawable/ic_attach_money_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/abeezee"
                    android:shadowColor="#00FFFDFD"
                    android:text="@string/showmyaverage"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textColorHint="#050505"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="10dp"
                    android:background="@color/lightgray" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abeezee"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/todooo"
                    android:textColor="@android:color/darker_gray" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>